--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <header class="header">
     <div class="container">
-      <div class="logo">Servigreen</div>
+      <div class="logo-wrap">   <div class="logo">Servigreen</div>   <div class="logo-sub">Naturaleza en tu hogar</div> </div>
       <nav class="nav">
         <a href="index.html" class="activo">Inicio</a>
         <a href="catalogo.html">Catalogo</a>
