--- a/catalogo.html
+++ b/catalogo.html
@@ -10,7 +10,7 @@
 
   <header class="header">
     <div class="container">
-      <div class="logo">Servigreen</div>
+      <div class="logo-wrap">   <div class="logo">Servigreen</div>   <div class="logo-sub">Naturaleza en tu hogar</div> </div>
       <nav class="nav">
         <a href="index.html">Inicio</a>
         <a href="catalogo.html" class="activo">Catalogo</a>
@@ -282,3 +282,4 @@
   <script src="js/ui.js"></script>
 </body>
 </html>
+
