--- a/catalogo.html
+++ b/catalogo.html
@@ -42,6 +42,12 @@
         <option value="stock-desc">Stock: Mayor a menor</option>
       </select>
     </div>
+    
+    <div class="resultados-bar">
+  <span id="result-count">0 productos</span>
+  <button id="limpiar-filtros" class="btn-limpiar">Limpiar filtros</button>
+</div>
+
 
     <div class="filtros">
       <button class="filtro-btn activo" onclick="filtrar('todos')">Todos</button>
@@ -282,4 +288,5 @@
   <script src="js/ui.js"></script>
 </body>
 </html>
+
 
