--- a/catalogo.html
+++ b/catalogo.html
@@ -105,6 +105,10 @@
             <span id="modal-precio" class="precio"></span>
           </div>
           <p id="modal-stock" class="stock"></p>
+          <div class="modal-acciones">
+  <button id="modal-agregar" class="btn-modal">Agregar al carrito 🧺</button>
+</div>
+
         </div>
       </div>
     </div>
@@ -288,5 +292,6 @@
   <script src="js/ui.js"></script>
 </body>
 </html>
+
 
 
