--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
         <div class="carrito-resumen-linea"><span>Subtotal</span><span id="carrito-subtotal">$0.00</span></div>
         <div class="carrito-resumen-linea"><span>Envio</span><span id="carrito-envio">$0.00</span></div>
         <div class="carrito-resumen-linea"><span>Impuestos</span><span id="carrito-impuestos">$0.00</span></div>
+        <div class="carrito-resumen-linea"><span>Items</span><span id="carrito-items-count">0</span></div>
+
       </div>
       <div class="carrito-total-container">
         <span class="carrito-total-label">Total:</span>
