--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
   <script type="module">
     import { db } from "./js/firebase.js";
     import { collection, getDocs } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+    let productoActual = null;
+    const btnModalAgregar = document.getElementById("modal-agregar");
+
 
     const modal = document.getElementById("producto-modal");
     const modalImagen = document.getElementById("modal-imagen");
@@ -114,6 +117,13 @@
       modalDescripcion.textContent = p.descripcion || p.Descripcion || "Sin descripcion.";
       modalPrecio.textContent = "$" + parseFloat(p.Precio || 0).toFixed(2);
       modalStock.textContent = "Stock disponible: " + (p.stock ?? 0);
+      
+      productoActual = p;
+if (btnModalAgregar) {
+  const stock = p.stock ?? 0;
+  btnModalAgregar.disabled = stock <= 0;
+}
+
       modal.classList.add("activo");
       modal.setAttribute("aria-hidden", "false");
       document.body.style.overflow = "hidden";
@@ -128,6 +138,22 @@
     document.getElementById("modal-cerrar").addEventListener("click", cerrarModal);
     modal.addEventListener("click", (e) => { if (e.target === modal) cerrarModal(); });
     document.addEventListener("keydown", (e) => { if (e.key === "Escape") cerrarModal(); });
+    if (btnModalAgregar) {
+  btnModalAgregar.addEventListener("click", () => {
+    if (!productoActual) return;
+    const stock = productoActual.stock ?? 0;
+    if (stock <= 0) return;
+    agregarAlCarrito(
+      productoActual.id,
+      productoActual.Nombre || "",
+      productoActual.Precio || 0,
+      productoActual.imagen || "",
+      stock
+    );
+    cerrarModal();
+  });
+}
+
 
     async function cargarDestacados() {
       const contenedor = document.getElementById("destacados");
